# library_system

./: .gitignore  Dockerfile  README.md  alembic.ini  library_system.db  mypy.ini  pyproject.toml  ruff.toml
migrations/: env.py
migrations/versions/: 0182dd89602f_insert_authors.py  075871b5258d_insert_admin_users_details.py  11b5c67d993c_create_admin_users_authors_books_.py  1f3bc1d32fa5_insert_reservation_statuses.py  300fe457de96_create_book_table.py  431932f80c4b_insert_stock_quantities.py  76faaf4a97d4_create_admin_user_and_author_tables.py  8e626e1bdb72_create_admin_user_and_author_tables.py  9ec59560a95c_create_author_table.py  b213d1b726df_create_admin_user_and_author_tables.py  c1d553105e9c_create_admin_user_table.py  c62c6444afe9_insert_books_details.py  d28edbc89768_check_stock_quantity_consistency.py  e8b356959079_create_new_tables.py  ec79d7375721_insert_sample_users.py
src/: main.py
src/config/: config.py  config.yaml
src/constants/: security.py
src/db/: check.py  engine.py  execution.py  operation.py  query.py
src/exceptions/: app.py  db.py
src/helper/: logging.py  pagination.py
src/models/: author.py  book.py  error_response.py  http_response_code.py  pagination.py  reservation.py  reservation_status.py  stock.py  user.py
src/router/: author.py  book.py  books.py  docs.py  health.py  reservation.py  stock.py  user.py
src/utils/: security.py
tests/: conftest.py  pytest.ini
tests/integration/: constant.py  test_author.py  test_book.py  test_books.py  test_health.py  test_stock.py  test_user.py  test_user_reservation.py
(+22 files in other folders)
